--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -25,6 +25,10 @@
         <i class="wrench icon"></i>
         Settings
     </a>
+    <a class="item" href="/users/logout">
+        <i class="power off icon"></i>
+        Log-out
+    </a>
 </div>
 {{{body}}}
 </body>
