--- a/views/learn.hbs
+++ b/views/learn.hbs
@@ -107,102 +107,13 @@
     <script src="../dist/components/sidebar.js"></script>
     <script src="../dist/components/transition.js"></script>
 </head>
-<div id="topmenuContainerWrapper">
-    <div id="contentContainerLogo">
-        <img src="/images/pulselogo.png" id="imageInDiv">
-    </div>
-    <div id="contentContainerNav">
-        <div id="navBar">
-            <a href="/">
-                <div id="navBarItems">
-                    <div id="centerButtonDiv">
-                        <i id="navBarButton" class="no-italics"><strong>Product</strong></i>
-                    </div>
-                </div>
-            </a>
-            <a href="/solution">
-                <div id="navBarItems">
-                    <div id="centerButtonDiv">
-                        <i id="navBarButton" class="no-italics"><strong>Idea</strong></i>
-                    </div>
-                </div>
-            </a>
-            <a href="/learn">
-                <div id="navBarItems">
-                    <div id="centerButtonDiv">
-                        <i id="navBarButton" class="no-italics"><strong>Learn</strong></i>
-                    </div>
-                </div>
-            </a>
-            <a href="/about">
-                <div id="navBarItems">
-                    <div id="centerButtonDiv">
-                        <i id="navBarButton" class="no-italics"><strong>About</strong></i>
-                    </div>
-                </div>
-            </a>
-            <a href="/support">
-                <div id="navBarItems">
-                    <div id="centerButtonDiv">
-                        <i id="navBarButton" class="no-italics"><strong>Support</strong></i>
-                    </div>
-                </div>
-            </a>
-            <a href="/pricing">
-                <div id="lastNavBarItem">
-                    <div id="centerButtonDiv">
-                        <i id="navBarButton" class="no-italics"><strong>Pricing</strong></i>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div id="rightnavWrapper">
-            <a href="/login">
-                <div id="buttonWrapper">
-                    <div id="centerButtonDiv">
-                        <i id="signUpButton" class="user icon">&nbsp;&nbsp;&nbsp;<strong>Register</strong></i>
-                    </div>
-                </div>
-            </a>
-            <a href="/login" id="loginLink">
-                <div id="buttonWrapper">
-                    <div id="centerButtonDiv">
-                        <i id="loginButton" class="sign in icon">&nbsp;&nbsp;&nbsp;<strong>Login</strong></i>
-                    </div>
-                </div>
-            </a>
-
-        </div>
-        <!-- Om een 2e navbar te maken onder eerste navbar
-        <div id="underNavBar">
-            <a href="" id="testButton">
-                <div id="navBarItems">
-                    <div id="centerButtonDiv">
-                        <i id="navBarButton">Features</i>
-                    </div>
-                </div>
-            </a>
-            <a href="" id="testButton">
-                <div id="navBarItems">
-                    <div id="centerButtonDiv">
-                        <i id="navBarButton">Features</i>
-                    </div>
-                </div>
-            </a>
-        </div>-->
-    </div>
-</div>
 <!-- Page Contents -->
 <div class="pusher">
     <div class="ui vertical stripe quote segment">
         <div class="ui equal width stackable internally celled grid">
             <div class="row">
-                <div class="column">
-                    <h3 style="color: black;">Our Car Detector Just Got A Lot Better</h3>
-                    <p style="color: #363945;">We have just updated our product by detecting license plates to<br>gain more information from detected cars. See our blog for more<br>information.</p>
-                </div>
-                <div class="column" style="background-color: #00AEEF;">
-                </div>
+                <div class="column" align = "center">
+                    <h3 style="color: black;">Learn about and help us</h3>
             </div>
         </div>
     </div>
@@ -219,6 +130,7 @@
                 </div>
                 <div class="column" style="background-color: #00AEEF;">
                     <a href="https://trello.com/b/o7aDbwqp/rd">
+                      <i class="massive trello icon"></i>
                         <h3 style="color: white;">Trello.</h3>
                         <p style="color: #363945;">Click here to see our Trello cards for future product changes</p></a>
                 </div>
@@ -230,6 +142,7 @@
                 </div>
                 <div class="column" style="background-color: #00AEEF;">
                     <a href="https://github.com/PLA24">
+                    <i class="massive github icon"></i>
                     <h3 style="color: white;">Github.</h3>
                     <p style="color: #363945;">Click here to see our code</p>
                     </a>
@@ -246,6 +159,7 @@
 
                 <div class="column" style="background-color: #00AEEF;">
                     <a href="https://github.com/PLA24/Blog/tree/master/source/_posts">
+                        <i class="massive blogger icon"></i>
                         <h3 style="color: white;">Blog.</h3>
                         <p style="color: #363945;">Click here to see our weekly blog with new posts about new features/updates!</p>
                     </a>
@@ -258,6 +172,7 @@
                 </div>
                 <div class="column" style="background-color: #00AEEF;">
                     <a href="https://www.gofundme.com">
+                      <i class="massive bitcoin icon"></i>
                         <h3 style="color: white;">Donate.</h3>
                         <p style="color: #363945;">Donations help support this project but are NOT required or even expected.</p></a>
                 </div>
@@ -271,15 +186,7 @@
         </div>
     </div>
 
-    <div class="ui vertical stripe quote segment">
-        <div class="ui equal width stackable internally celled grid">
-            <div class="center aligned row">
-                <div class="column" style="background-color: #00AEEF;">
-                    <p style="color: white;"><a href="/learn" style="color: white"><strong><u>Click here to download the user manual</u></strong></a></p>
-                </div>
-            </div>
-        </div>
-    </div>
+
 
 </body>
 </html>
