--- a/views/support.hbs
+++ b/views/support.hbs
@@ -108,93 +108,6 @@
     <script src="../dist/components/transition.js"></script>
 
 </head>
-
-<body class="pushable">
-<div id="topmenuContainerWrapper">
-    <div id="contentContainerLogo">
-        <img src="/images/pulselogo.png" id="imageInDiv">
-    </div>
-    <div id="contentContainerNav">
-        <div id="navBar">
-            <a href="/">
-                <div id="navBarItems">
-                    <div id="centerButtonDiv">
-                        <i id="navBarButton" class="no-italics"><strong>Product</strong></i>
-                    </div>
-                </div>
-            </a>
-            <a href="/solution">
-                <div id="navBarItems">
-                    <div id="centerButtonDiv">
-                        <i id="navBarButton" class="no-italics"><strong>Idea</strong></i>
-                    </div>
-                </div>
-            </a>
-            <a href="/learn">
-                <div id="navBarItems">
-                    <div id="centerButtonDiv">
-                        <i id="navBarButton" class="no-italics"><strong>Learn</strong></i>
-                    </div>
-                </div>
-            </a>
-            <a href="/about">
-                <div id="navBarItems">
-                    <div id="centerButtonDiv">
-                        <i id="navBarButton" class="no-italics"><strong>About</strong></i>
-                    </div>
-                </div>
-            </a>
-            <a href="/support">
-                <div id="navBarItems">
-                    <div id="centerButtonDiv">
-                        <i id="navBarButton" class="no-italics"><strong>Support</strong></i>
-                    </div>
-                </div>
-            </a>
-            <a href="/pricing">
-                <div id="lastNavBarItem">
-                    <div id="centerButtonDiv">
-                        <i id="navBarButton" class="no-italics"><strong>Pricing</strong></i>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div id="rightnavWrapper">
-            <a href="/login">
-                <div id="buttonWrapper">
-                    <div id="centerButtonDiv">
-                        <i id="signUpButton" class="user icon">&nbsp;&nbsp;&nbsp;<strong>Register</strong></i>
-                    </div>
-                </div>
-            </a>
-            <a href="/login" id="loginLink">
-                <div id="buttonWrapper">
-                    <div id="centerButtonDiv">
-                        <i id="loginButton" class="sign in icon">&nbsp;&nbsp;&nbsp;<strong>Login</strong></i>
-                    </div>
-                </div>
-            </a>
-
-        </div>
-        <!-- Om een 2e navbar te maken onder eerste navbar
-        <div id="underNavBar">
-            <a href="" id="testButton">
-                <div id="navBarItems">
-                    <div id="centerButtonDiv">
-                        <i id="navBarButton">Features</i>
-                    </div>
-                </div>
-            </a>
-            <a href="" id="testButton">
-                <div id="navBarItems">
-                    <div id="centerButtonDiv">
-                        <i id="navBarButton">Features</i>
-                    </div>
-                </div>
-            </a>
-        </div>-->
-    </div>
-</div>
 <!-- Page Contents -->
 <div class="pusher">
     <div class="ui vertical stripe quote segment">
@@ -268,7 +181,7 @@
         <div class="ui equal width stackable internally celled grid">
             <div class="center aligned row">
                 <div class="column" style="background-color: #00AEEF;">
-                    <p style="color: white;">Want to check the user manual ? <a href="/learn" style="color: white"><u>Click here.</u></a></p>
+                    <p style="color: white;"><a href="/learn" style="color: white"><strong><u>Click here to download the user manual</u></strong></a></p>
                 </div>
             </div>
         </div>
@@ -297,6 +210,7 @@
             </div>
         </div>
     </div>
+
 </div>
 
 </body>
