--- a/views/homepage.hbs
+++ b/views/homepage.hbs
@@ -116,7 +116,29 @@
         <div class="ui text container">
             <h1 class="ui inverted header"> Pulse <br>Car-Tracking-Platform</h1>
             <h2>Track cars wherever they are, whenever you want.</h2><br>
-            <div class="ui huge primary button">Watch video<i class="right arrow icon"></i></div>
+            <a href="https://www.youtube.com/watch?v=Flxe64JqjvU">
+                <div class="ui huge primary button">Watch video<i class="right arrow icon"></i></div>
+            </a>
+
+            <div class="ui basic modal">
+                <div class="ui icon header">
+                    <i class="archive icon"></i>
+                    Archive Old Messages
+                </div>
+                <div class="content">
+                    <p>Your inbox is getting full, would you like us to enable automatic archiving of old messages?</p>
+                </div>
+                <div class="actions">
+                    <div class="ui red basic cancel inverted button">
+                        <i class="remove icon"></i>
+                        No
+                    </div>
+                    <div class="ui green ok inverted button">
+                        <i class="checkmark icon"></i>
+                        Yes
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
