popup window on pulse icon click added

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -18,7 +18,7 @@
         Home
     </a>
     <a class="item" href="/map">
-        <i class="block map icon"></i>
+        <i class="map icon"></i>
         Map
     </a>
     <a class="item" href="/settings">
