--- a/public/stylesheets/map.css
+++ b/public/stylesheets/map.css
@@ -1,9 +1,15 @@
-.map {
-  margin-left: auto;
-  margin-right: auto;
+body {
   background-color: black;
 }
 
-body {
-  background-color: black;
+#infoscreen{
+  z-index: 9999;
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+}
+#topbar{
+  max-height: 50px;
 }
