--- a/views/map.hbs
+++ b/views/map.hbs
@@ -2,90 +2,59 @@
 <html>
 
 <head>
-    <title>Vector Layer</title>
-    <link rel="stylesheet" href="https://openlayers.org/en/v4.6.4/css/ol.css" type="text/css">
-    <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
-    <script src="https://openlayers.org/en/v4.6.4/build/ol.js"></script>
-    <script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="/javascripts/openlayer.js"></script>
-    <link rel="stylesheet" href="/stylesheets/map.css" type="text/css">
-    <link href="/stylesheets/map.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://openlayers.org/en/v4.6.4/css/ol.css" type="text/css">
+  <script src="https://cdn.polyfill.io/v2/polyfill.min.js?features=requestAnimationFrame,Element.prototype.classList,URL"></script>
+  <script src="https://openlayers.org/en/v4.6.4/build/ol.js"></script>
+  <script src="/javascripts/openlayer.js"></script>
+  <link rel="stylesheet" href="/stylesheets/map.css" type="text/css">
 </head>
-<body>
+<script type="text/javascript">
+  //datum
+  var today = new Date();
+  var dd = today.getDate();
+  var mm = today.getMonth() + 1; //January is 0!
+  var yyyy = today.getFullYear();
+  if (dd < 10) {
+    dd = '0' + dd
+  }
 
-<div class="ui inverted menu" id="topbar">
+  if (mm < 10) {
+    mm = '0' + mm
+  }
+
+  today = mm + '/' + dd + '/' + yyyy;
+</script>
+<body>
+  <div class="ui inverted menu" id="topbar">
     <a class="item right floated" href="/settings">
         <i class="wrench icon large"></i>
     </a>
-</div>
-<div id="map" class="map">
-    <div id="popup"></div>
-</div>
+  </div>
+  <div id="map" class="map" style="z-index: 0"></div>
+  <!-- <div id="popup"></div> -->
+</body>
+<script src="/javascripts/openlayerComp.js"></script>
 
-<script>
-    var map = new ol.Map({
-        layers: [
-            //base layer van openstreet
-            new ol.layer.Tile({
-                source: new ol.source.OSM()
-            }),
-            //planet mosaic tile layer
-            new ol.layer.Tile({
-                source: new ol.source.XYZ({
-                    url: 'https://tiles.planet.com/basemaps/v1/planet-tiles/global_monthly_2017_08_mosaic/gmap/{z}/{x}/{y}.png?api_key=cc785926661d40188fe04e08a97b609e'
-                })
-            }),
-            //gemeente layer
-            vectorGemeenteLayer,
-            //pulse icon
-            vectorLayer
-        ],
-        //view eigenschappen
-        target: 'map',
-        view: new ol.View({
-            center: ol.proj.fromLonLat([5.498573, 52.165923]),
-            minZoom: 8,
-            maxZoom: 18,
-            zoom: 8,
-            extent: [500000, 6750000, 750000, 7000000]
-        })
-    });
-
-    //eigenschappen van popup
-    var element = document.getElementById('popup');
-
-    var popup = new ol.Overlay({
-        element: element,
-        positioning: 'bottom-center',
-        stopEvent: false,
-        offset: [0, -50]
-    });
-    map.addOverlay(popup);
-
-    // display popup on click
-    map.on('click', function (evt) {
-        var feature1 = map.forEachFeatureAtPixel(evt.pixel,
-                function (feature1, layer) {
-                    if (layer == vectorLayer) {
-                        return feature1;
-                    }
-                });
-        if (feature1) {
-
-            var coordinates = feature1.getGeometry().getCoordinates();
-            popup.setPosition(coordinates);
-            $(element).popover({
-                'placement': 'top',
-                'html': true,
-                'content': feature1.get('name')
-            });
-            $(element).popover('show');
-        } else {
-            $(element).popover('destroy');
-        }
-    });
-</script>
+<body>
+  <div class="ui tiny modal" id="infoscreen">
+    <i class="close icon">
+  </i>
+    <div class="header">
+      <script type="text/javascript">
+        document.write(name);
+      </script>
+    </div>
+    <div class="image content">
+      <div class="description">
+        <p>Amount of cars during
+          <script type="text/javascript">
+            document.write(today);
+          </script>
+        </p>
+      </div>
+      <div class="actions">
+      </div>
+    </div>
+  </div>
 </body>
 </html>
