--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,6 +10,7 @@
             integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
             crossorigin="anonymous"></script>
     <script src="/semantic/dist/semantic.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
 </head>
 <body>
 <div id="sidebar" class="ui left visible vertical inverted sidebar labeled icon menu">
