--- a/views/settings.hbs
+++ b/views/settings.hbs
@@ -1,110 +1,13 @@
 <!DOCTYPE html>
-<html><head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-
-    <title>Settings</title>
-
-    <link rel='stylesheet' href='/stylesheets/settings.css' />
-    <link rel="stylesheet" href="/semantic/dist/semantic.css" />
-
-    <style type="text/css">
-        body {
-            margin-top: 1%;
-            margin-left: 10%;
-        }
-        .input {
-
-            text-align: right;
-            float: right;
-            clear: right;
-            width: 250px;
-
-
-        }
-        #popup {
-            width:160px;
-            height:80px;
-            padding:20px;
-            background-color:gray;
-            position:absolute;
-            top:100px;
-            left:100px;
-            display:none;
-        }
-        #edit{
-            float: right;
-            clear: right;
-            width: 250px;
-            margin-top: 50%;
-
-        }
-
-
-
-    </style>
-
+<html>
+<head>
+    <title>{{title}}</title>
+    <link rel='stylesheet' href='/stylesheets/style.css'/>
+    <link rel="stylesheet" href="/semantic/dist/semantic.css"/>
 </head>
-
 <body>
-<div class="ui grid">
-    <div class="four wide column">
-        <div class="ui vertical fluid tabular menu" id="menu">
-            <a class="teal item active">Account information</a>
-            <a class="teal item ">Test</a>
-        </div>
-    </div>
-    <div class="twelve wide stretched column">
-        <div class="ui container">
-            <label>Username</label>
-            <div class="ui input">
-                <input type="text" name="username" value="{{UserName}}">
-            </div>
-            <p></p>
-            <label>E-mail</label>
-            <div class="ui input">
-                <input type="text" name="Password" value="{{Email}}">
-            </div>
-            <p></p>
-            <label>Password</label>
-            <div class="ui input">
-                <input type="password" name="Password" value="{{Password}}">
-            </div>
-            <p></p>
-            <label>Township</label>
-            <div class="ui input">
-                <input type="text" name="Township" value="{{Township}}">
-            <p></p>
-        </div>
-        <div class="ui right bottom container">
-            <button type="submit" class="ui blue submit button" id="edit">Edit</button>
-        </div>
-    </div>
-        <div id="popup">
-            <div>Enter Password:</div>
-            <input id="pass" type="password"/>
-            <button onclick="done()">Done</button>
-        </div>
-        <button onclick="showPopup()">Show Popup</button>
+    <h1 class="ui header" style="text-align: center">Settings</h1>
 </div>
-</div>
-
-
-<script>
-    function done() {
-        document.getElementById("popup").style.display = "none";
-        var password = document.getElementById("pass").value;
-
-        //DO STUFF WITH PASSWORD HERE
-    };
-
-    function showPopup() {
-        document.getElementById("popup").style.display = "block";
-    }
-
-</script>
 </body>
-
-
 </html>
+
