--- a/views/map.hbs
+++ b/views/map.hbs
@@ -49,16 +49,55 @@
     </div>
     <div class="image content">
       <div class="description">
-        <p>Amount of cars during
-          <script type="text/javascript">
-            document.write(today);
-          </script>
-            <p id="test">TEMP AMOUNT</p>
-        </p>
+        <div class="content">
+          <i class="circle icon" style="color:red"></i>LIVE
+            <div class="sub header">
+              <div class="content">
+                Total amount of vehicles during
+                  <script type="text/javascript">
+                    document.write(today + "&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;");
+                  </script>
+                    <p style="display:inline" id="test"><b>TEMP AMOUNT</b></p>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="chartdiv">
+          <canvas id="line-chart" width="600" height="350"></canvas>
+        </div>
+        <script type="text/javascript">
+
+      var DataChart = new Chart(document.getElementById("line-chart"), {
+      type: 'line',
+      data: {
+        labels: [0 + " uur",6 + " uur",12 + " uur",18 + " uur",24 + " uur"],
+        datasets: [{
+            data: [0, 300, 400, 500],
+            label: "aantal auto's per 6 uur",
+            borderColor: "#3e95cd",
+            fill: true
+          }
+        ]
+      },
+      options: {
+        title: {
+          display: true,
+          text:''
+        }
+      }
+      });
+        </script>
+        <style media="screen">
+          .chartdiv{
+            max-width: 700px;
+          }
+        </style>
       </div>
       <div class="actions">
       </div>
     </div>
+
   </div>
 </body>
 </html>
