--- a/views/map.hbs
+++ b/views/map.hbs
@@ -96,9 +96,7 @@
     <i class="close icon">
   </i>
     <div class="header">
-      <script type="text/javascript">
-        document.write(name);
-      </script>
+      <p id="p1">TEMP NAME</p>
     </div>
     <div class="image content">
       <div class="description">
