--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,61 +1,24 @@
-<center><h1 class="ui header" id="titel"><i class="chart bar icon"></i>Dashboard</h1></center>
+<center>
+  <h1 class="ui header" id="titel"><i class="chart bar icon"></i>Dashboard</h1></center>
 
 <style>
-#titel {
-  padding: 10px;
-  margin-bottom: 15px;
-  background-color: #434343;
-  color: white;
-}
+  #titel {
+    padding: 10px;
+    margin-bottom: 15px;
+    background-color: #434343;
+    color: white;
+  }
 </style>
 
 <body>
 
-  <script>
-    function makeBar(name, [a1, a2, a3, a4, a5, a6], [v1, v2, v3, v4, v5, v6], [m1, m2, m3, m4, m5, m6], [b1, b2, b3, b4, b5, b6], [aw1, aw2, aw3, aw4, aw5, aw6]){
-        var TopbarChart =  new Chart(name, {
-                  type: 'bar',
-                  data: {
-                    labels:["00:00 - 04:00", "04:00 - 08:00", "08:00 - 12:00", "12:00 - 16:00", "16:00 - 20:00", "20:00 - 00:00"],
-                    datasets:[{
-                      label:"Auto's",
-                      data:[a1, a2, a3, a4, a5, a6],
-                      backgroundColor: "#6666ff"
-                    }, {
-                      label:"Vrachtwagens",
-                      data:[v1, v2, v3, v4, v5, v6],
-                      backgroundColor: "#ff66ff"
-                    }, {
-                      label:"Motoren",
-                      data:[m1, m2, m3, m4, m5, m6],
-                      backgroundColor: "6666ff"
-                    }, {
-                      label:"Bromfietsen",
-                      data:[b1, b2, b3, b4, b5, b6],
-                      backgroundColor: "#66ff66"
-                    }, {
-                      label:"Aanhangwagens",
-                      data:[aw1, aw2, aw3, aw4, aw5, aw6],
-                      backgroundColor: "#ff6666"
-                    }]
-                  },
-                  options:{
-                    legend:{
-                      position:'bottom'
-                    }
-                  }
-              });
-        }
 
 
   </script>
 
-  <script type="text/javascript">
 
 
-  </script>
-
-<div style="margin-left: 10%; margin-right:5%">
+  <div style="margin-left: 10%; margin-right:5%">
 
 
     <div class="ui segment">
@@ -81,7 +44,7 @@
 
       <div class="ui five statistics">
         <div class="statistic">
-          <div class="value" id = "personenautovalue">
+          <div class="value" id="personenautovalue">
             0
           </div>
           <div class="label">
@@ -89,7 +52,7 @@
           </div>
         </div>
         <div class="statistic">
-          <div class="value" id = "bedrijfsautovalue">
+          <div class="value" id="bedrijfsautovalue">
             0
           </div>
           <div class="label">
@@ -97,7 +60,7 @@
           </div>
         </div>
         <div class="statistic">
-          <div class="value" id = "aanhangwagenvalue">
+          <div class="value" id="aanhangwagenvalue">
             0
           </div>
           <div class="label">
@@ -105,7 +68,7 @@
           </div>
         </div>
         <div class="statistic">
-          <div class="value" id = "motorfietsvalue">
+          <div class="value" id="motorfietsvalue">
             0
           </div>
           <div class="label">
@@ -113,7 +76,7 @@
           </div>
         </div>
         <div class="statistic">
-          <div class="value" id = "bromfietsvalue">
+          <div class="value" id="bromfietsvalue">
             0
           </div>
           <div class="label">
@@ -123,162 +86,17 @@
       </div>
     </div>
 
-  <div class="ui horizontal segments">
+    <div class="ui horizontal segments">
 
-    <div class="ui segment" style="width:33%">
-      <h2 class="ui center aligned header">
+      <div class="ui segment" style="width:33%">
+        <h2 class="ui center aligned header">
         <div class="content">
-          Aantal voertuigen
-          <div class="sub header">In het laatste uur per gemeente</div>
+          Brandstoffen van voertuigen
+          <div class="sub header">Vandaag</div>
         </div>
       </h2>
-      <canvas id="myPie" width="400" height="400"></canvas>
+        <canvas id="myPie2" width="400" height="400"></canvas>
         <script>
-          var myPieChart = new Chart(myPie,{
-            type: 'pie',
-            data: {
-              labels:['Amsterdam-West', 'Amsterdam-Noord', 'Amsterdam-Zuid'],
-              datasets:[{data:[20, 40, 60],
-              backgroundColor:['#ff6666', '#6666ff', '#66ff66'] }]
-            },
-            options: {
-              legend:{
-                position:'bottom'
-              }
-            }
-          });
-        </script>
-    </div>
-
-    <div class="ui segment" style="width:66%">
-      <h2 class="ui center aligned header">
-        <div class="content">
-          Alle voertuigen
-          <div class="sub header">in de laatste 24 uur</div>
-        </div>
-      </h2>
-      <canvas id="myBar"></canvas>
-      <script>
-        makeBar(myBar, [78, 64, 144, 132, 178, 103], [67, 94, 76, 65, 34, 28], [12, 18, 23, 46, 55, 19], [3, 46, 83, 86, 48, 23], [12, 24, 36, 48, 40, 45])
-      </script>
-    </div>
-
-  </div>
-
-<div class="ui horizontal segments">
-  <div class="ui segment" style="width:66%">
-    <h2 class="ui center aligned header">
-        <div class="content">
-          Alle voertuigen per gemeente
-          <div class="sub header">In de laatste 5 tellingen</div>
-        </div>
-      </h2>
-
-    <div class="ui selection dropdown" id="township">
-      <input type="hidden" name="gender">
-      <i class="dropdown icon"></i>
-      <div class="text">Amsterdam-West</div>
-      <div class="menu">
-        <div class="item active selected" data-value="0">Amsterdam-West</div>
-        <div class="item" data-value="1">Amsterdam-Zuid</div>
-      </div>
-    </div>
-
-    <button class="ui button" onclick="setBarTownship();">Select</button>
-
-      <canvas id="myBar1"></canvas>
-      <script>
-        function setBarTownship(){
-          var townshipNr = $('#township').dropdown('get value');
-          console.log(townshipNr);
-        switch (townshipNr) {
-          case 0:
-              document.getElementById('myBar1').innerHTML = Chart(myBar1, {
-                  type: 'bar',
-                  data: {
-                    labels:["12:00", "13:00", "14:00", "15:00", "16:00"],
-                    datasets:[{
-                      label:"Auto's",
-                      data:[100, 123, 134, 145, 170],
-                      backgroundColor: "#bf6788"
-                    }, {
-                      label:"Vrachtwagens",
-                      data:[120, 89, 89, 67, 45],
-                      backgroundColor: "#ffffff"
-                    }]
-                  },
-                  options:{
-                    legend:{
-                      position:'bottom'
-                    }
-                  }
-              });
-              break;
-          case 1:
-              new Chart(myBar1, {
-                  type: 'bar',
-                  data: {
-                    labels:["12:00", "13:00", "14:00", "15:00", "16:00"],
-                    datasets:[{
-                      label:"Personenauto's",
-                      data:[100, 123, 134, 145, 170],
-                      backgroundColor: "#bf76gg"
-                    }, {
-                      label:"Vrachtwagens",
-                      data:[120, 89, 89, 67, 20],
-                      backgroundColor: "#666666"
-                    }]
-                  },
-                  options:{
-                    legend:{
-                      position:'bottom'
-                    }
-                  }
-              });
-              break;
-        }
-        };
-      </script>
-      <script type="text/javascript">
-      console.log("HALLOOOOOO");
-      $.get("/livecountday", function(data) {
-        $("#personenautovalue").html(data.personenauto);
-        $("#bedrijfsautovalue").html(data.bedrijfsauto);
-        $("#aanhangwagenvalue").html(data.aanhangwagen);
-        $("#motorfietsvalue").html(data.motorfiets);
-        $("#bromfietsvalue").html(data.bromfiets);
-        console.log("hallooo" + data.personenauto);
-
-        });
-      </script>
-
-
-  </div>
-
-  <div class="ui segment" style="width:33%">
-      <h2 class="ui center aligned header">
-        <div class="content">
-          Type voertuigen
-          <div class="sub header">vandaag</div>
-        </div>
-      </h2>
-      <canvas id="myPie2" width="400" height="400"></canvas>
-        <script>
-          var myPieChart = new Chart(myPie2,{
-            type: 'doughnut',
-            data: {
-              labels:['Elektrisch', 'Benzine', 'Diesel', 'Hybride'],
-              datasets:[{data:[34, 46, 54, 44],
-              backgroundColor:['#ff6666', '#6666ff', '#66ff66', '#ff66ff'] }]
-            },
-            options: {
-              legend:{
-                position:'bottom'
-              }
-            }
-          });
-        </script>
-        <script type="text/javascript">
         console.log("HALLOOOOOO");
         $.get("/fueldata", function(data) {
           //$("#test").html(data.AmountTotal);
@@ -289,18 +107,233 @@
           myPieChart.data.datasets[0].data[3] = data.hybrid;
           myPieChart.update();
 
+        });
+        </script>
+      </div>
+
+      <div class="ui segment" style="width:66%">
+        <h2 class="ui center aligned header">
+        <div class="content">
+          Alle voertuigen
+          <div class="sub header">vandaag</div>
+        </div>
+      </h2>
+        <canvas id="myBar"></canvas>
+        <script>
+          var TopbarChart = new Chart(myBar, {
+            type: 'bar',
+            data: {
+              labels: ["00:00 - 04:00", "04:00 - 08:00", "08:00 - 12:00", "12:00 - 16:00", "16:00 - 20:00", "20:00 - 00:00"],
+              datasets: [{
+                label: "Personenauto's",
+                data: [0, 0, 0, 0, 0, 0],
+                backgroundColor: "#6666ff"
+              }, {
+                label: "Bedrijfsauto's",
+                data: [0, 0, 0, 0, 0, 0],
+                backgroundColor: "#ff66ff"
+              }, {
+                label: "Aanhangwagens",
+                data: [0, 0, 0, 0, 0, 0],
+                backgroundColor: "6666ff"
+              }, {
+                label: "Motorfietsen",
+                data: [0, 0, 0, 0, 0, 0],
+                backgroundColor: "#66ff66"
+              }, {
+                label: "Bromfietsen",
+                data: [0, 0, 0, 0, 0, 0],
+                backgroundColor: "#ff6666"
+              }]
+            },
+            options: {
+              legend: {
+                position: 'bottom'
+              }
+            }
+          });
+        </script>
+
+        <script type="text/javascript">
+        $.get("/graphdata01", function(data) {
+          TopbarChart.data.datasets[0].data[0] = data.personenauto;
+          TopbarChart.data.datasets[1].data[0] = data.bedrijfsauto;
+          TopbarChart.data.datasets[2].data[0] = data.aanhangwagen;
+          TopbarChart.data.datasets[3].data[0] = data.motorfiets;
+          TopbarChart.data.datasets[4].data[0] = data.bromfiets;
+          TopbarChart.update();
+
+        });
+        $.get("/graphdata02", function(data) {
+          TopbarChart.data.datasets[0].data[1] = data.personenauto;
+          TopbarChart.data.datasets[1].data[1] = data.bedrijfsauto;
+          TopbarChart.data.datasets[2].data[1] = data.aanhangwagen;
+          TopbarChart.data.datasets[3].data[1] = data.motorfiets;
+          TopbarChart.data.datasets[4].data[1] = data.bromfiets;
+          TopbarChart.update();
+
+        });
+        $.get("/graphdata03", function(data) {
+          TopbarChart.data.datasets[0].data[2] = data.personenauto;
+          TopbarChart.data.datasets[1].data[2] = data.bedrijfsauto;
+          TopbarChart.data.datasets[2].data[2] = data.aanhangwagen;
+          TopbarChart.data.datasets[3].data[2] = data.motorfiets;
+          TopbarChart.data.datasets[4].data[2] = data.bromfiets;
+          TopbarChart.update();
+
+        });
+        $.get("/graphdata04", function(data) {
+          TopbarChart.data.datasets[0].data[3] = data.personenauto;
+          TopbarChart.data.datasets[1].data[3] = data.bedrijfsauto;
+          TopbarChart.data.datasets[2].data[3] = data.aanhangwagen;
+          TopbarChart.data.datasets[3].data[3] = data.motorfiets;
+          TopbarChart.data.datasets[4].data[3] = data.bromfiets;
+          TopbarChart.update();
+
+        });
+        $.get("/graphdata05", function(data) {
+          TopbarChart.data.datasets[0].data[4] = data.personenauto;
+          TopbarChart.data.datasets[1].data[4] = data.bedrijfsauto;
+          TopbarChart.data.datasets[2].data[4] = data.aanhangwagen;
+          TopbarChart.data.datasets[3].data[4] = data.motorfiets;
+          TopbarChart.data.datasets[4].data[4] = data.bromfiets;
+          TopbarChart.update();
+
+        });
+
+        $.get("/graphdata06", function(data) {
+          TopbarChart.data.datasets[0].data[5] = data.personenauto;
+          TopbarChart.data.datasets[1].data[5] = data.bedrijfsauto;
+          TopbarChart.data.datasets[2].data[5] = data.aanhangwagen;
+          TopbarChart.data.datasets[3].data[5] = data.motorfiets;
+          TopbarChart.data.datasets[4].data[5] = data.bromfiets;
+          TopbarChart.update();
+
+        });
+        </script>
+      </div>
+
+    </div>
+
+    <div class="ui horizontal segments">
+      <div class="ui segment" style="width:66%">
+
+
+        <button class="ui button" onclick="setBarTownship();">Select</button>
+
+        <canvas id="myBar1"></canvas>
+        <script>
+          function setBarTownship() {
+            var townshipNr = $('#township').dropdown('get value');
+            console.log(townshipNr);
+            switch (townshipNr) {
+              case 0:
+                document.getElementById('myBar1').innerHTML = Chart(myBar1, {
+                  type: 'bar',
+                  data: {
+                    labels: ["12:00", "13:00", "14:00", "15:00", "16:00"],
+                    datasets: [{
+                      label: "Auto's",
+                      data: [100, 123, 134, 145, 170],
+                      backgroundColor: "#bf6788"
+                    }, {
+                      label: "Vrachtwagens",
+                      data: [120, 89, 89, 67, 45],
+                      backgroundColor: "#ffffff"
+                    }]
+                  },
+                  options: {
+                    legend: {
+                      position: 'bottom'
+                    }
+                  }
+                });
+                break;
+              case 1:
+                new Chart(myBar1, {
+                  type: 'bar',
+                  data: {
+                    labels: ["12:00", "13:00", "14:00", "15:00", "16:00"],
+                    datasets: [{
+                      label: "Personenauto's",
+                      data: [100, 123, 134, 145, 170],
+                      backgroundColor: "#bf76gg"
+                    }, {
+                      label: "Vrachtwagens",
+                      data: [120, 89, 89, 67, 20],
+                      backgroundColor: "#666666"
+                    }]
+                  },
+                  options: {
+                    legend: {
+                      position: 'bottom'
+                    }
+                  }
+                });
+                break;
+            }
+          };
+        </script>
+        <script type="text/javascript">
+          console.log("HALLOOOOOO");
+          $.get("/livecountday", function(data) {
+            $("#personenautovalue").html(data.personenauto);
+            $("#bedrijfsautovalue").html(data.bedrijfsauto);
+            $("#aanhangwagenvalue").html(data.aanhangwagen);
+            $("#motorfietsvalue").html(data.motorfiets);
+            $("#bromfietsvalue").html(data.bromfiets);
+            console.log("hallooo" + data.personenauto);
+
           });
         </script>
 
 
-    </div>
-  </div>
+      </div>
 
-</div>
+
+        <script>
+          var myPieChart = new Chart(myPie2, {
+            type: 'doughnut',
+            data: {
+              labels: ['Elektrisch', 'Benzine', 'Diesel', 'Hybride'],
+              datasets: [{
+                data: [34, 46, 54, 44],
+                backgroundColor: ['#ff6666', '#6666ff', '#66ff66', '#ff66ff']
+              }]
+            },
+            options: {
+              legend: {
+                position: 'bottom'
+              }
+            }
+          });
+        </script>
+        <script type="text/javascript">
+          console.log("HALLOOOOOO");
+          $.get("/fueldata", function(data) {
+            //$("#test").html(data.AmountTotal);
+            console.log("hallooo" + data)
+            myPieChart.data.datasets[0].data[0] = data.elektrisch;
+            myPieChart.data.datasets[0].data[1] = data.benzine;
+            myPieChart.data.datasets[0].data[2] = data.diesel;
+            myPieChart.data.datasets[0].data[3] = data.hybrid;
+            myPieChart.update();
+
+          });
+        </script>
+
+
+      </div>
+    </div>
+
+  </div>
 
 </body>
 <script>
-  $('#township').dropdown('get text');
-
+  //$('#township').dropdown('get text');
   $('#liveCount').dropdown('get text');
+  
+});
+  //console.log($('#liveCount').dropdown('get text'));
+
 </script>
